syntax = "proto3";
package ozon.route256.workshop5;

import "google/protobuf/timestamp.proto";

option csharp_namespace = "Ozon.Route256.KafkaRedis.Grpc";

message OrderEvent {
  int64 order_id = 1;
  int64 client_id = 2;
  OrderState order_state = 3;
  google.protobuf.Timestamp timestamp = 4;
}

enum OrderState {
  ORDER_STATE_UNSPECIFIED = 0;
  ORDER_STATE_CREATED = 1;
  ORDER_STATE_CHANGED = 2;
  ORDER_STATE_COMPLETED = 3;
}
